[gd_scene load_steps=2 format=3 uid="uid://ci2u0qst1cb6n"]

[ext_resource type="Script" path="res://networking_client.gd" id="1_nl1lj"]

[node name="Networking" type="Node"]
script = ExtResource("1_nl1lj")

[node name="Lobby" type="Node2D" parent="."]

[node name="ConnectBtn" type="Button" parent="Lobby"]
offset_left = 227.0
offset_top = 19.0
offset_right = 299.0
offset_bottom = 50.0
size_flags_horizontal = 4
text = "Connect"

[node name="DisconnectBtn" type="Button" parent="Lobby"]
offset_left = 41.0
offset_top = 63.0
offset_right = 135.0
offset_bottom = 94.0
size_flags_horizontal = 4
text = "Disconnect"

[node name="HostInput" type="LineEdit" parent="Lobby"]
offset_left = 41.0
offset_top = 18.0
offset_right = 218.0
offset_bottom = 49.0
text = "127.0.0.1"
placeholder_text = "Host"

[node name="Main" type="Node2D" parent="."]

[node name="StartingPoint" type="Marker2D" parent="Main"]
position = Vector2(143, 99)

[connection signal="pressed" from="Lobby/ConnectBtn" to="." method="_on_connect_btn_pressed"]
[connection signal="pressed" from="Lobby/DisconnectBtn" to="." method="_on_disconnect_btn_pressed"]
